--- a/docs/aims.tex
+++ b/docs/aims.tex
@@ -1,7 +1,19 @@
 
 \section{Aims}
 \label{sec:aims}
-This is the aims section.
+
+The aim of the project is to investigate the following hypotheses relating to (whatever the
+general name of the experiments is) assays of mibrobial growth on
+solid agar:
+\begin{itemize}
+\item Growth is not independent and is affected by competition and/or
+  signalling.
+\item More can be learnt about growth rate by accounting for these
+  effects mechanistically (needs explaining).
+
+This may affect the results of existing experiments.
+\end{itemize}
+
 
 
 %%% Local Variables:
