--- a/docs/outline.org
+++ b/docs/outline.org
@@ -45,29 +45,29 @@
           single celled eukaryotic organisms for which this is
           appropriate?) in high-throughput or smaller scale manual
           experiments.
-** Objectives
-  - [ ] Should be bullet point format.
-  - [ ] Develop a model of competition for nutrients and/or signalling
+** Objectives [8/9]
+  - [X] Should be bullet point format.
+  - [ ] Should be S.M.A.R.T. - I think they are.
+  - [X] Develop a model of competition for nutrients and/or signalling
     between cultures on a QFA agar gel.
-    - [ ] Reanalyse telemere data from (ref), comparing the
-      competition and independence models (a special case of the
-      competition model), to determine the effect of competition on
-      the experiments.
-    - [ ] Compare competition effects in different experimental
-      designs in order to design experiments which minimze competition
-      effects.
-      - For instance, compare spot and agar geometries and initial nutrient
-        densities.
-    - [ ] Develop a model of competition in terms of parameters of the
-      logistic model of population growth in oder to compare fitness
-      measurements to previous studies.
-    - [ ] Reanalyse telomere data with using the modified logistic
-      model in order to determine the effects on gene interaction.
-    - [ ] Package the model in SBML.
-      - [ ] Conform to minimum information standards and publish in
-        the biomodels database.
-    - [ ] Document and package other analysis tools in python in order
-      to distribute.
+  - [X] Reanalyse telemere data from (ref), comparing the
+    competition and independence models (a special case of the
+    competition model), to determine the effect of competition on
+    the experiments.
+  - [X] Compare competition effects in different experimental
+    designs in order to design experiments which minimze competition
+    effects.
+    - For instance, compare spot and agar geometries and initial nutrient
+      densities.
+  - [X] Develop a model of competition in terms of parameters of the
+    logistic model of population growth in oder to compare fitness
+    measurements to previous studies.
+  - [X] Reanalyse telomere data with using the modified logistic
+    model in order to determine the effects on gene interaction.
+  - [X] Package the model in SBML. Conform to minimum information
+    standards and publish in the biomodels database.
+  - [X] Document and package other analysis tools in python in order
+    to distribute.
 ** Background
   - [ ] Explain why we expect competition
   - [ ] What difference to results do we likely expect when modelling
