Sketch out an introduction and update hypotheses.

--- a/docs/aims.tex
+++ b/docs/aims.tex
@@ -2,16 +2,31 @@
 \section{Aims}
 \label{sec:aims}
 
-The aim of the project is to investigate the following hypotheses relating to (whatever the
-general name of the experiments is) assays of mibrobial growth on
-solid agar:
-\begin{itemize}
-\item Growth is not independent and is affected by competition and/or
-  signalling.
-\item More can be learnt about growth rate by accounting for these
-  effects mechanistically (needs explaining).
 
-This may affect the results of existing experiments.
+Quantitative fitness analysis (QFA) is a method for...  Nutrients are
+known to diffuse through agar (ref) and yeast and bacteria are known
+to have mechanisms for signalling between cultures/colonies
+(ref). There is evidence, from past QFA experiments and related
+experiments (ref), that either competition, or signalling, or both are
+affecting the growth of colonies in the assays.
+
+An analysis by (ref), of data obtained by an alternative experimental method,
+SGA, attempts to account for these effects by normalising measurements
+using a statistical approach (be more specific) (non-mechanistically).
+
+% This project aims to investigate whether competition and/or signalling
+% is affecting the results of quantitative fitness ananlysis (QFA)
+% experiments and how th.
+This project aims to investigate the following hypotheses:
+%Specifically the aim is to investigate the following hypotheses:
+\begin{itemize}
+\item Growth of colonies in QFA experiments is not independent and is
+  affected by competition and/or signalling.
+\item By accounting for competition and signalling mechanistically, it
+  will be possible to design experiments which minimise their effect.
+\item Reanalysis of QFA data from (ref), using a model accounting for
+  competition effects, will better predict genetic interaction
+  strength and (possibly) provide evidence of new genetic interactions.
 \end{itemize}
 
 
