--- a/docs/proposal.bib
+++ b/docs/proposal.bib
@@ -25,3 +25,51 @@ url = {http://dx.doi.org/10.1186/1471-2105-11-287},
 volume = 11,
 year = 2010
 }
+
+
+@article{Baryshnikova2010,
+author={Baryshnikova,Anastasia and Costanzo,Michael and Kim,Yungil and
+                  Ding,Huiming and Koh,Judice and Toufighi,Kiana and
+                  Youn,Ji-young and Ou,Jiongwen and San
+                  Luis,Bryan-joseph and Bandyopadhyay,Sunayan and
+                  Hibbs,Matthew and Hess,David and Gingras,Anne-claude
+                  and Bader,Gary D. and Troyanskaya,Olga G. and
+                  Brown,Grant W. and Andrews,Brenda and Boone,Charles
+                  and Myers,Chad L.},
+year=2010,
+month=12,
+title={Quantitative analysis of fitness and genetic interactions in yeast on a genome scale},
+journal={Nature Methods},
+volume=7,
+number=12,
+pages={1017-24},
+note={Copyright - Copyright Nature Publishing Group Dec 2010; Last updated - 2014-09-19},
+abstract={This approach relies on colony-size measurements obtained
+                  from digital images to determine a composite score
+                  derived from both the magnitude and reproducibility
+                  of genetic interactions3. The S score is an estimate
+                  of the confidence with which genetic interactions
+                  can be assigned but does not reflect single- or
+                  double-mutant fitness4, which are critical for
+                  detailed interpretation of interactions and the
+                  resultant network5,6. Furthermore, quantification of
+                  colony size measurements using the S score is not as
+                  precise as that achieved by higher-accuracy, albeit
+                  lower-throughput, methods4. Finally, mapping
+                  genome-wide, fitness-based genetic interactions
+                  requires normalization of several parameters
+                  associated with colony-based interaction assays
+                  (Supplementary Table 1), as these can produce
+                  unreliable interactions when applied to whole-genome
+                  screens.},
+keywords={Chemistry; Genetics; Yeast; Genomics; Gene Expression
+                  Regulation, Fungal; Ultraviolet Rays; Yeasts --
+                  radiation effects; Oligonucleotide Array Sequence
+                  Analysis -- methods; Algorithms; Genome-Wide
+                  Association Study -- methods; Mutation; Mutagenesis;
+                  Yeasts -- genetics; Genetic Fitness; Genome, Fungal},
+isbn=15487091,
+language={English},
+url={http://search.proquest.com/docview/815144256?accountid=12753},
+}
+}
