Add detail to introduction.

--- a/docs/aims.tex
+++ b/docs/aims.tex
@@ -3,32 +3,49 @@
 \label{sec:aims}
 
 
-Quantitative fitness analysis (QFA) is a method for...  Nutrients are
-known to diffuse through agar (ref) and yeast and bacteria are known
-to have mechanisms for signalling between cultures/colonies
-(ref). There is evidence, from past QFA experiments and related
-experiments (ref), that either competition, or signalling, or both are
-affecting the growth of colonies in the assays.
-
-An analysis by (ref), of data obtained by an alternative experimental method,
-SGA, attempts to account for these effects by normalising measurements
-using a statistical approach (be more specific) (non-mechanistically).
+Quantitative fitness analysis (QFA) is a method for inferring the
+fitness of microbial genetic variants from their growth curves (see
+refs). In this approach, genetic variants are grown on solid agar in
+an array up to (number) colonies. Nutrients are known to diffuse
+through agar (ref) and microbial organisms, including
+\textit{Saccharomyces cerevisiae}, are known to have mechanisms for
+signalling between cultures/colonies (ref). There is evidence, from
+past QFA experiments (ref) and SGA experiments
+\citep{Baryshnikova2010}, that either competition, or signalling, or
+both is affecting the growth of colonies in the assays. An analysis by
+\citet{Baryshnikova2010}, of data from synthetic genetic arrays
+(SGAs), a related experimental method, attempts to normalise for
+systematic variation, including from competition effects, using
+statistical techniques aimed at improving the correlation between
+repeats of identical mutant strains at different locations. This is a
+non-mechanistic solution. (Could mention advantages of the Bayesian
+approach of Heydari et al.)
 
 % This project aims to investigate whether competition and/or signalling
 % is affecting the results of quantitative fitness ananlysis (QFA)
 % experiments and how th.
+This project aims to account for competition and signalling
+mechanistically in order to investigate the following hypotheses:
 This project aims to investigate the following hypotheses:
 %Specifically the aim is to investigate the following hypotheses:
 \begin{itemize}
 \item Growth of colonies in QFA experiments is not independent and is
   affected by competition and/or signalling.
-\item By accounting for competition and signalling mechanistically, it
-  will be possible to design experiments which minimise their effect.
+\item By accounting mechanistically for competition and signalling effects, it
+  will be possible to design experiments which minimise these effects.
 \item Reanalysis of QFA data from (ref), using a model accounting for
   competition effects, will better predict genetic interaction
   strength and (possibly) provide evidence of new genetic interactions.
 \end{itemize}
 
+
+Telomeres (the whatever gene) are believed involved cancer and aging
+(ref). Knowledge of interactions could improve our understanding of...
+
+If, in the data from (ref), modelling competition improves the
+prediction of genetic interactions, this is also likely to be relevant
+to assays of other mibrobial organisms and investigations of other
+types or genetic interaction.
 
 
 %%% Local Variables:
