--- a/docs/proposal.bib
+++ b/docs/proposal.bib
@@ -73,3 +73,36 @@ language={English},
 url={http://search.proquest.com/docview/815144256?accountid=12753},
 }
 }
+
+@article {Heydari2016,
+author = {Heydari, Jonathan and Lawless, Conor and Lydall, David A. and Wilkinson, Darren J.},
+title = {Bayesian hierarchical modelling for inferring genetic interactions in yeast},
+journal = {Journal of the Royal Statistical Society: Series C (Applied Statistics)},
+volume = 65,
+number = 3,
+issn = {1467-9876},
+url = {http://dx.doi.org/10.1111/rssc.12126},
+doi = {10.1111/rssc.12126},
+pages = {367--393},
+keywords = {Epistasis, Fitness, Genetic interaction, Genomics, Hierarchical models},
+year = 2016,
+abstract = {Quantitative fitness analysis (QFA) is a high throughput
+                  experimental and computational methodology for
+                  measuring the growth of microbial populations. QFA
+                  screens can be used to compare the health of cell
+                  populations with and without a mutation in a query
+                  gene to infer genetic interaction strengths
+                  genomewide, examining thousands of separate
+                  genotypes. We introduce Bayesian hierarchical models
+                  of population growth rates and genetic interactions
+                  that better reflect QFA experimental design than
+                  current approaches. Our new approach models
+                  population dynamics and genetic interaction
+                  simultaneously, thereby avoiding passing information
+                  between models via a univariate fitness
+                  summary. Matching experimental structure more
+                  closely, Bayesian hierarchical approaches use data
+                  more efficiently and find new evidence for genes
+                  which interact with yeast telomeres within a
+                  published data set.},
+}
