--- a/docs/aims.tex
+++ b/docs/aims.tex
@@ -13,12 +13,12 @@ signalling between cultures/colonies (ref). There is evidence, from
 past QFA experiments (ref) and SGA experiments
 \citep{Baryshnikova2010}, that either competition, or signalling, or
 both is affecting the growth of colonies in the assays. An analysis by
-\citet{Baryshnikova2010}, of data from synthetic genetic arrays
-(SGAs), a related experimental method, attempts to normalise for
-systematic variation, including from competition effects, using
+\citet{Baryshnikova2010} of data from synthetic genetic arrays (SGAs),
+a related experimental method, attempts to normalise for systematic
+variation, including from competition effects, using non-mechanistic
 statistical techniques aimed at improving the correlation between
-repeats of identical mutant strains at different locations. This is a
-non-mechanistic solution. (Could mention advantages of the Bayesian
+repeats of identical mutant strains at different locations.
+(Could mention advantages of the Bayesian
 approach of Heydari et al.)
 
 % This project aims to investigate whether competition and/or signalling
