Add images and captions

--- a/docs/background.tex
+++ b/docs/background.tex
@@ -1,4 +1,4 @@
-\graphicspath{{images/}}
+\graphicspath{{images_low_res/}}
 
 \section{Background of Research}
 \label{sec:background}
@@ -15,30 +15,41 @@
 \begin{Figure}
   \centering
   \includegraphics[width=\linewidth]{5658435523_c2e43729f1_b}
-  \captionof{figure}{An example QFA agar.}
+  \captionof{figure}{An image of 15 cultures on a section of solid agar
+    from a QFA procedure. Image taken ??with permission?? from the Colonyzer GitHub repo
+    https://github.com/CnrLwlss/Colonyzer \citep{Lawless2010}}
 \end{Figure}
 
 
 \begin{Figure}
   \centering
-  %\includegraphics[width=\linewidth]{qfa_growth_array}
-  \captionof{figure}{Growth curves of 308 genetic colonies from a FA. From (ref)}
+  \includegraphics[width=\linewidth]{qfa_growth_array}
+  \captionof{figure}{Growth curves, captured automatically by
+    Colonyzer \citep{Lawless2010}, of 308 cultures in a QFA
+    procedure. Reproduced ??with permission?? from \citet{Banks2012}.}
 \end{Figure}
 
 \begin{Figure}
   \centering
   \includegraphics[width=\linewidth]{pin_v_spot_growth}
-  \captionof{figure}{Pin v spot growth curves \citep{Lawless2010}.}
+  \captionof{figure}{Fits of the logistic growth model, to cell
+    density observations of yeast growing on solid agar, for spotted
+    cultures (circles) and pinned cultures (crosses). In A) culture
+    density is plotted on a linear scale. In B) culture density is
+    plotted on a logarithmic scale. C) shows images of the spotted and
+    pinned cultures corresponding to the data in A) \& B). Reproduced
+    ??with permission?? from \citet{Lawless2010}.}
 \end{Figure}
 
 
-\subsection{Evidence of Competition and Signalling}
+\subsection{Evidence of Competition and Signalling in QFA}
 
 \subsection{Modelling Approaches}
 
 \subsubsection{Mass Action Kinetics}
 \subsubsection{The Logistic Growth Model}
-\subsubsection{Fishers multiplicative model of }
+\subsubsection{Fishers multiplicative model of genetic interactions}
+\subsubsection{Hierarchical models and Bayesian inference}
 
 \subsection{Inference of Genetic Interactions / Telomere Cap Defects}
 
