--- a/docs/preamble.tex
+++ b/docs/preamble.tex
@@ -6,7 +6,7 @@
 
 
 % Load all necessary packages
-\RequirePackage{inputenc,crop,graphicx,amsmath,array,color,amssymb,flushend,stfloats,amsthm,chngpage,times}
+\RequirePackage{inputenc,crop,graphicx,amsmath,array,color,amssymb,flushend,stfloats,amsthm,chngpage,times,hyperref}
 \RequirePackage[LY1]{fontenc}
 
 
