--- a/docs/proposal.bib
+++ b/docs/proposal.bib
@@ -106,3 +106,5 @@ abstract = {Quantitative fitness analysis (QFA) is a high throughput
                   which interact with yeast telomeres within a
                   published data set.},
 }
+
+@MISC{Banks2012, url = {http://www.jove.com/video/4018/a-quantitative-fitness-analysis-workflow}, title = {A Quantitative Fitness Analysis Workflow}, journal = {JoVE (Journal of Visualized Experiments)}, YEAR = 2012, howpublished = {\url{http://www.jove.com/video/4018/a-quantitative-fitness-analysis-workflow}}, author = {Banks, A.P. and Lawless, C. and Lydall, D.A.}, archived = {http://greycite.knowledgeblog.org/?uri=http%3A%2F%2Fwww.jove.com%2Fvideo%2F4018%2Fa-quantitative-fitness-analysis-workflow, http://wayback.archive.org/web/http://www.jove.com/video/4018/a-quantitative-fitness-analysis-workflow}, }
